cabal-version:        3.6
name:                 deid
version:              0.1.0.0
license:              BSD-3-Clause
author:               Michael Lee
maintainer:           milee@liveperson.com
category:             application
extra-source-files:   README.md

library
  exposed-modules:    Data.Text.Time
                    , Data.Text.Time.Format
                    , Data.Text.Time.Parse
                    , Etc.Deid
                    , Etc.Delete
                    , Etc.Csv2Deid
                    , Etc.OsDeid
                    , Etc.PubSub2Csv
                    , Etc.Redact
                    , Gcp.Send
                    , Model.BigQuery
                    , Model.Csv
                    , Model.Deid
                    , Model.Elastic
                    , Model.PubSub
  hs-source-dirs:     src
  ghc-options:        -O2 -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints -fno-warn-type-defaults -flate-specialise -fspecialise-aggressively
  default-language:   Haskell2010
  default-extensions: BangPatterns
                    , BlockArguments
                    , ConstraintKinds
                    , DataKinds
                    , DeriveAnyClass
                    , DeriveFunctor
                    , DeriveGeneric
                    , DerivingVia
                    , DuplicateRecordFields
                    , FlexibleContexts
                    , FlexibleInstances
                    , GADTs
                    , KindSignatures
                    , LambdaCase
                    , MultiParamTypeClasses
                    , PatternSynonyms
                    , PolyKinds
                    , OverloadedStrings
                    , OverloadedRecordDot
                    , PolyKinds
                    , RankNTypes
                    , RecordWildCards
                    , StandaloneDeriving
                    , ScopedTypeVariables
                    , StarIsType
                    , StrictData
                    , TemplateHaskell
                    , TupleSections
                    , TypeApplications
                    , TypeFamilies
                    , TypeOperators
                    , TypeSynonymInstances
  build-depends:      base
                    , aeson
                    , aeson-optics
                    , attoparsec
                    , bloodhound
                    , bytestring
                    , cassava
                    , containers
                    , either
                    , exceptions
                    , formatting
                    , generic-aeson
                    , gogol
                    , gogol-bigquery
                    , gogol-core
                    , gogol-dlp
                    , gogol-pubsub
                    , http-client
                    , iso8601-time
                    , lens
                    , optparse-applicative
                    , servant-client
                    , sort
                    , split
                    , streamly
                    , text
                    , text-conversions
                    , time
                    , vector

executable csv2deid
  main-is: csv2deid.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , bytestring
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , hashmap
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time
               , vector

executable deid
  main-is: deid.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable os-deid
  main-is: os-deid.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable delete
  main-is: delete.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , bytestring
               , containers
               , deid
               , http-client
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable pubsub2csv
  main-is: pubsub2csv.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , bytestring
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable msgsize
  main-is: msgsize.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable os-pairs
  main-is: os-pairs.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time

executable redact
  main-is: redact.hs
  hs-source-dirs: app
  ghc-options: -Wall -O2 -flate-specialise -fspecialise-aggressively
  default-language: Haskell2010
  default-extensions: DuplicateRecordFields
                    , LambdaCase
                    , NoFieldSelectors
                    , OverloadedStrings
                    , OverloadedRecordDot
  build-depends: base
               , aeson
               , bloodhound
               , containers
               , cassava
               , deid
               , gogol
               , gogol-core
               , gogol-dlp
               , lens
               , lens-aeson
               , read-env-var
               , streamly
               , text
               , time
